@@ -52,10 +52,12 @@ add_library("${RW_LIB_TARGET_NAME}" SHARED
     "dat/LogMsg.cpp"
     "dat/SettingsNode.cpp"
     "events/EventHandler.cpp"
+    "gfx/Renderer.cpp"
     "io/File.cpp"
     "lif/glfw/GlfwManager.cpp"
     "lif/glfw/Window.cpp"
     "lif/vulkan/BaseObject.cpp"
+    "lif/vulkan/CommandBuffer.cpp"
     "lif/vulkan/CommandPool.cpp"
     "lif/vulkan/DebugUtilsMessenger.cpp"
     "lif/vulkan/DeviceBase.cpp"
