@@ -6,8 +6,9 @@
 using namespace rw::ui;
 
 BaseWindow::BaseWindow(RedWolfManager& manager, std::string_view title, int width, int height, bool resizable, BaseObject* parent) :
-   BaseObject(manager, parent), manager_{ manager }, logger_{ manager.logger() },
-   glfwManager_{ manager.glfwManager() }, window_{ manager, title, width, height, resizable }, vulkanInstance_{ manager.vulkanInstance() }
+   BaseObject(manager), manager_{ manager }, logger_{ manager.logger() }, glfwManager_{ manager.glfwManager() }, window_{
+      manager, title, width, height, resizable
+   } //, vulkanInstance_{ manager.vulkanInstance() }
 {
 }
 
@@ -24,9 +25,8 @@ void BaseWindow::checkEvents()
 
 void BaseWindow::close()
 {
-   graphicsPipelines_.clear();
-   surface_.reset();
-   graphicsDevice_.reset();
+   // surface_.reset();
+   // graphicsDevice_.reset();
    window_.close();
 }
 
@@ -36,40 +36,11 @@ bool BaseWindow::open()
 
    if (!window_.open()) return false;
 
-   // Create a surface.
-   surface_ = std::make_unique<rw::lif::vlk::Surface>(manager_, window_.handle());
-
-   // Get the physical device for rendering.
-   bool done{ false };
-   while (!done)
-   {
-      physicalDevice_ = vulkanInstance_.getNextPhysicalDevice(rw::lif::vlk::PhysicalDevice::OpCategory::graphics, physicalDevice_);
-      if (physicalDevice_ == nullptr)
-      {
-         logger_.relErr("No physical device supports the graphics pipeline.");
-         window_.close();
-         return false;
-      }
-
-      if (physicalDevice_->isSurfaceSupported(surface_->handle()))
-      {
-         graphicsDevice_ = physicalDevice_->createGraphicsDevice();
-         if (!surface_->setDevices(*physicalDevice_, *graphicsDevice_))
-         {
-            logger_.relErr("Failed to set rendering devices for the window surface.");
-            window_.close();
-            return false;
-         }
-         done = true;
-      }
-   }
-
-   // Create the default graphics pipelines.
-   graphicsPipelines_.reserve(shader_map.size());
-   for (const auto& shader : shader_map)
-   {
-      graphicsPipelines_.emplace_back(manager_, *graphicsDevice_, *(surface_->swapChain()), shader.value.first, shader.value.second);
-   }
+   // if (!renderer_.initialise())
+   //{
+   //    window_.close();
+   //    return false;
+   // }
 
    return true;
 }
