@@ -32,23 +32,8 @@ namespace rw::ui
    public:
       static constexpr std::string_view default_window_title{ "RedWolf Application" }; /**< Default window title. */
       static constexpr int              default_window_width{ 800 };                   /**< Default window width. */
-      static constexpr int              default_window_height{ 600 };                  /**< Default window height. */
-
-      /**
-       * @brief Different graphics pipelines.
-       */
-      enum class GfxPipelineIdx
-      {
-         plain
-      };
-
-      /**
-       * @brief Map for associating graphics pipelines with their source shaders.
-       */
-      static constexpr rw::cont::ConstexprMap<GfxPipelineIdx, std::pair<std::string_view, std::string_view>, 4U> shader_map{
-         { GfxPipelineIdx::plain, { "shaders/vertex/base.vert", "shaders/vertex/base.frag" } }
-      };
-
+      static constexpr int              default_window_height{ 600 };                  /**< Default window height.
+                              
       /**
        * @brief Default constructor. The window is NOT automatically opened.
        * @details This function must be called from the main thread.
@@ -103,12 +88,6 @@ namespace rw::ui
       rw::lif::glfw::GlfwManager& glfwManager_; /**< Manager for the GLFW library. */
 
       rw::lif::glfw::Window window_; /**< Raw window. */
-
-      rw::lif::vlk::Instance&                       vulkanInstance_;            /**< Vulkan instance. */
-      rw::lif::vlk::PhysicalDevice*                 physicalDevice_{ nullptr }; /**< Physical rendering device. */
-      std::unique_ptr<rw::lif::vlk::GraphicsDevice> graphicsDevice_;            /**< Logical rendering device. */
-      std::unique_ptr<rw::lif::vlk::Surface>        surface_;                   /**< Surface on which the window will be drawn. */
-      std::vector<rw::lif::vlk::GraphicsPipeline>   graphicsPipelines_;         /**< List of default graphics pipelines. */
    };
 } // namespace rw::ui
 
